<resources>
    <string name="app_name">荔荔在目</string>
    <string name="login">登录</string>
    <string name="login_out">退出登录</string>
    <string name="about_us">关于我们</string>

    <string name="bottom_navigation_home">主页</string>
    <string name="bottom_navigation_todo_list">事项</string>
    <string name="bottom_navigation_user">用户</string>

    <string name="module_blackboard">Blackboard</string>
    <string name="module_library">图书馆</string>
    <string name="module_gobye">Gobye</string>
    <string name="module_schedule">课程表</string>
    <string name="module_controller">模块管理</string>

    <string name="url_gobye">http://stu.szu.edu.cn/gobye/</string>
    <string name="bb_subject_title">BlackBoard科目列表</string>
    <string name="bb_unfinished_homework_list">未完成作业列表</string>
    <string name="bb_homework_list">作业列表</string>
    <string name="bb_subject_list">科目列表</string>

    <string name="bb_homework_info_title">作业详情</string>
    <string name="bb_homework_info_attachment">附件</string>

    <string name="book_name">默认书名</string>
    <string name="book_borrow_time">借阅时间：</string>
    <string name="book_deadline">归还时间：</string>

    <string name="dialog_course_venue_hint">教室信息</string>
    <string name="dialog_button_cancel">关闭</string>
    <string name="dialog_button_save">保存</string>

</resources>
