<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="8"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/book_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_name"
                android:textColor="#000"
                android:textSize="24sp"
                />

            <TextView
                android:id="@+id/borrow_Time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/book_borrow_time"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/return_DeadLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_deadline"
                android:textSize="16sp"
                />
        </LinearLayout>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="right|center_vertical"
            android:layout_weight="2"
            android:alpha=".5"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_keyboard_arrow_right"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/dividerColor"
        />

</LinearLayout>
